--- a/styles/action-bar.css
+++ b/styles/action-bar.css
@@ -1,9 +1,9 @@
 #actions-list-container {
-    width: 360px;
-    height: 58px;
+    width: 36rem;
+    height: 5.8rem;
     background-color: var(--terciary-color);
     color: var(--secondary-color);
-    font-size: 12px;
+    font-size: 1.2rem;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     position: absolute;
@@ -24,14 +24,36 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 60px;
-    height: 42px;
+    width: 6rem;
+    height: 4.2rem;
     gap: 8px;
     cursor: pointer;
 }
 
 .action-img {
-    width: 20px;
-    height: 22px;
+    width: 2rem;
+    height: 2.2rem;
     object-fit: contain;
+}
+
+@media screen and (max-width: 768px) {
+    #actions-list-container {
+        width: 76.8rem;
+        height: 5.8rem;
+    }
+
+    #actions-btn-container {
+        gap: 36px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    #actions-list-container {
+        width: 144rem;
+        height: 5.8rem;
+    }
+
+    #actions-btn-container {
+        gap: 36px;
+    }
 }
