--- a/styles/presencial-card.css
+++ b/styles/presencial-card.css
@@ -1,20 +1,9 @@
-.consulta-presencial {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    width: 328px;
-    height: 180px;
-    border-radius: 8px;
-    background-color: var(--terciary-color);
-}
-
 .consulta-presencial-content {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    width: 328px;
+    width: 32.8rem;
     padding: 16px 20px;
 }
 
@@ -36,10 +25,10 @@
 }
 
 .endereco-btn {
-    width: 296px;
-    height: 48px;
+    width: 29.6rem;
+    height: 4.8rem;
     border-radius: 8px;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 500;
     background-color: var(--address-container-btn);
     color: var(--terciary-color);
