--- a/styles/root.css
+++ b/styles/root.css
@@ -15,3 +15,12 @@
     /* FONTS */
     --fonte: Montserrat, "sans-serif";
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    min-width: 36rem;
+    max-width: 144rem;
+}
