--- a/styles/modal.css
+++ b/styles/modal.css
@@ -52,3 +52,17 @@
     border-radius: 50%;
     margin-right: 16px;
 }
+
+@media screen and (min-width: 768px) {
+    .modal-container {
+        width: 76.8rem;
+        height: 100%;
+        
+    }
+
+    .modal-actions-container {
+        position: relative;
+        left: 100%;
+        margin-left: 2px;
+    }
+}
