--- a/styles/cards-consulta.css
+++ b/styles/cards-consulta.css
@@ -8,7 +8,7 @@
     gap: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .list-container {
         width: 76.8rem;
         height: 40rem;
@@ -19,7 +19,7 @@
     }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
     .list-container {
         width: 144rem;
         height: auto;
