--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,3 @@
-#container {
-    font-family: var(--fonte);
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-    width: 36rem;
-    height: 100%;
-}
-
 #header {
     display: flex;
     flex-direction: row;
@@ -45,7 +37,7 @@
 .container-day {
     width: 36rem;
     height: 4.2rem;
-
+    margin-bottom: 8px;
 }
 
 .day {
@@ -55,11 +47,6 @@
 }
 
 @media screen and (min-width: 768px) {
-    #container {
-        width: 76.8rem;
-        height: 100%;
-    }
-
     #header {
         width: 76.8rem;
         height: 5.7rem;
@@ -81,11 +68,6 @@
 }
 
 @media screen and (min-width: 1440px) {
-    #container {
-        width: 144rem;
-        height: 124.9rem;
-    }
-
     #header {
         width: 144rem;
         height: 16rem;
