--- a/styles/modal.css
+++ b/styles/modal.css
@@ -55,14 +55,6 @@
 
 @media screen and (min-width: 768px) {
     .modal-container {
-        width: 76.8rem;
-        height: 100%;
-        
-    }
-
-    .modal-actions-container {
-        position: relative;
-        left: 100%;
-        margin-left: 2px;
+        display: none;
     }
 }
