--- a/styles/root.css
+++ b/styles/root.css
@@ -24,3 +24,26 @@ body {
     min-width: 36rem;
     max-width: 144rem;
 }
+
+#container {
+    font-family: var(--fonte);
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    width: 36rem;
+    height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    #container {
+        width: 76.8rem;
+        height: 100%;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    #container {
+        width: 144rem;
+        height: 100%;
+        margin-left: 30rem;
+    }
+}
