--- a/styles/side-btn.css
+++ b/styles/side-btn.css
@@ -28,10 +28,7 @@
 
 @media screen and (min-width: 768px) {
     .side-btn {
-        position: absolute;
-        left: 85%;
-        bottom: 100%;
-        z-index: 99;
+        display: none;
     }
     
 }
